Fix wrong flex container for title alignment

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -121,12 +121,15 @@
 
 	.notification-subject {
 		display: flex;
+		align-items: center;
+
+		& > .image {
+			align-self: flex-start;
+		}
 
 		& > span.text,
 		& > a > span.text {
 			padding-left: 10px;
-			display: inline-flex;
-			align-items: center;
 		}
 	}
 
